--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
 
+    <a href="pages/about.html">About Page</a>
+
     <h1 class="cocogoose">Try cocogoose</h1>
     <h1 class="lato">Try Lato</h1>
 
