Add mobile index navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,39 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1d827eb1c8.js" crossorigin="anonymous"></script>
+
 
 </head>
 
 <body>
+    <navbar>
+        <div class="navbar-top">
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+            <div class="languages">English</div>
+            <div id="my-page">My Page</div>
+            <div class="logout">Logout</div>
+        </div>
 
-    <a href="pages/about.html">About Page</a>
 
-    <h1 class="cocogoose">Try cocogoose</h1>
-    <h1 class="lato">Try Lato</h1>
+        <div class="navbar-bottom">
+            <img id="navbar-logo" src="images/conference-logo.PNG" alt="Global Summit Logo">
+            <ul class="navbar-sections">
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="#">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
+            </ul>
+            <button id="at-campaign" type="button">CC Campaign</button>
+        </div>
+    </navbar>
+
+    <h2 class="cocogoose">Try cocogoose</h2>
+    <h2 class="lato">Try Lato</h2>
 
 </body>
 
