Add background image and fix html linters

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conference Page</title>
-    <link rel="stylesheet" media="screen and (max-width: 767px" ) href="styles/index-style-max-width-767px.css">
-    <link rel="stylesheet" media="screen and (min-width: 768px" ) href="styles/index-style-min-width-768px.css">
+    <link rel="stylesheet" media="screen and (max-width:767px)" href="styles/index-style-max-width-767px.css">
+    <link rel="stylesheet" media="screen and (min-width:768px)" href="styles/index-style-min-width-768px.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <navbar>
+    <nav>
         <div class="navbar-top">
             <ul class="social-networks">
                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
@@ -27,8 +27,6 @@
             <div id="my-page">My Page</div>
             <div class="logout">Logout</div>
         </div>
-
-
         <div class="navbar-bottom">
             <img id="navbar-logo" src="images/conference-logo.PNG" alt="Global Summit Logo">
             <ul class="navbar-sections">
@@ -40,7 +38,18 @@
             </ul>
             <button id="at-campaign" type="button">CC Campaign</button>
         </div>
-    </navbar>
+    </nav>
+
+    <section id="introduction">
+        <div id="title">
+            <h2>"Hello! Sharing World"</h2>
+            <h1>Agricultural Technology <br>
+                Global Summit <span>2022</span>
+            </h1>
+        </div>
+        <p>An exciting experience for both agriculture and tech
+            enthusiasts is taking place in March, in Costa Rica</p>
+    </section>
 
     <h2 class="cocogoose">Try cocogoose</h2>
     <h2 class="lato">Try Lato</h2>
