--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Conference</title>
-    <link rel="stylesheet" media="screen and (min-width: 768px" ) href="../styles/about-style-max-width-767px.css">
-    <link rel="stylesheet" media="screen and (max-width: 767px" ) href="../styles/about-style-min-width-768px.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px)" href="../styles/about-style-max-width-767px.css">
+    <link rel="stylesheet" media="screen and (max-width: 767px)" href="../styles/about-style-min-width-768px.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
