Add date and place on header section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         </div>
         <p>An exciting experience for both agriculture and tech
             enthusiasts is taking place in March, in Costa Rica</p>
+        <div class="date">
+            <h3><strong>2022.03.15(TUE) ~ 16(WED)</strong> </h3>
+            <h4>@ Centro de Convenciones de Costa Rica</h4>
+        </div>
+        
     </section>
 
     <h2 class="cocogoose">Try cocogoose</h2>
