Style intro section with lato and normal colors

--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
     <section id="introduction">
         <div id="title">
             <h2>"Hello! Sharing World"</h2>
-            <h1>Agricultural Technology <br>
-                Global Summit <span>2022</span>
-            </h1>
+            <h1>Agricultural Technology Global Summit 2022</h1>
         </div>
         <p>An exciting experience for both agriculture and tech
             enthusiasts is taking place in March, in Costa Rica</p>
-        <div class="date">
-            <h3><strong>2022.03.15(TUE) ~ 16(WED)</strong> </h3>
-            <h4>@ Centro de Convenciones de Costa Rica</h4>
+        <div class="when-where">
+            <h2 id="date">2022.03.15(TUE) ~ 16(WED)</h2>
+            <h2 id="location">@ Centro de Convenciones de Costa Rica</h2>
         </div>
         
     </section>
