Make mobile the first priority.
I was wrongfully working on the desktop stylesheet.
Fixed by copying and pasting code from one to other.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conference Page</title>
-    <link rel="stylesheet" media="screen and (max-width:767px)" href="styles/index-style-max-width-767px.css">
+    <link rel="stylesheet" href="styles/index-style-max-width-767px.css">
     <link rel="stylesheet" media="screen and (min-width:768px)" href="styles/index-style-min-width-768px.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
