Add more text to intro event description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <h1>Agricultural Technology Global Summit 2022</h1>
         </div>
         <p>An exciting experience for both agriculture and tech
-            enthusiasts is taking place in March, in Costa Rica</p>
+            enthusiasts is taking place in March, in Costa Rica.
+            Take part and extend your network in an event hosting 
+            the world's leading companies in agricultural technologies.</p>
         <div class="when-where">
             <h2 id="date">2022.03.15(TUE) ~ 16(WED)</h2>
             <h2 id="location">@ Centro de Convenciones de Costa Rica</h2>
