Add program section with text and icons

--- a/index.html
+++ b/index.html
@@ -47,13 +47,54 @@
         </div>
         <p>An exciting experience for both agriculture and tech
             enthusiasts is taking place in March, in Costa Rica.
-            Take part and extend your network in an event hosting 
+            Take part and extend your network in an event hosting
             the world's leading companies in agricultural technologies.</p>
         <div class="when-where">
             <h2 id="date">2022.03.15(TUE) ~ 16(WED)</h2>
             <h2 id="location">@ Centro de Convenciones de Costa Rica</h2>
         </div>
-        
+    </section>
+
+    <section id="program">
+        <h2>Main Program</h2>
+        <ul id="program-list">
+            <li id="lecture">
+                <i class="fas fa-chalkboard-teacher"></i>
+                <h3>Lecture</h3>
+                <p>Listen to industry professionals from around the globe
+                    speak about the newest tendencies, efforts and breakthrough
+                    discoveries that will influence the future of the industry.</p>
+            </li>
+            <li id="at-exhibition">
+                <i class="fas fa-walking"></i>
+                <h3>AT Exhibition</h3>
+                <p>Take your time as you walk through the stands of 200 companies
+                    who have brought their best to capture your attention.</p>
+            </li>
+            <li id="forum">
+                <i class="far fa-handshake"></i>
+                <h3>Forum</h3>
+                <p>Grab a refreshing drink and share your thoughts and opinions
+                    with any of the other 10,000 attendees. Remember, your network
+                    is equal to your networth!</p>
+            </li>
+            <li id="workshop">
+                <i class="fas fa-toolbox"></i>
+                <h3>Workshop</h3>
+                <p>Discover and interact hands-on with various prototypes
+                    designed by professionals. You and your team will tweak
+                    their functions to test their usability in the real world.
+                </p>
+            </li>
+            <li id="at-ignite">
+                <i class="fas fa-project-diagram"></i>
+                <h3>AT Ignite</h3>
+                <p>Get opportunities to network with AT affiliates
+                    around the world, also after the summit.
+                </p>
+            </li>
+        </ul>
+
     </section>
 
     <h2 class="cocogoose">Try cocogoose</h2>
