Style program section

--- a/index.html
+++ b/index.html
@@ -62,29 +62,25 @@
                 <i class="fas fa-chalkboard-teacher"></i>
                 <h3>Lecture</h3>
                 <p>Listen to industry professionals from around the globe
-                    speak about the newest tendencies, efforts and breakthrough
-                    discoveries that will influence the future of the industry.</p>
+                    speak about the newest tendencies.</p>
             </li>
             <li id="at-exhibition">
                 <i class="fas fa-walking"></i>
                 <h3>AT Exhibition</h3>
-                <p>Take your time as you walk through the stands of 200 companies
-                    who have brought their best to capture your attention.</p>
+                <p>Take your time as you walk through the stands of 
+                    200 companies who have brought their best.</p>
             </li>
             <li id="forum">
                 <i class="far fa-handshake"></i>
                 <h3>Forum</h3>
                 <p>Grab a refreshing drink and share your thoughts and opinions
-                    with any of the other 10,000 attendees. Remember, your network
-                    is equal to your networth!</p>
+                    with any of the other 10,000 attendees.</p>
             </li>
             <li id="workshop">
                 <i class="fas fa-toolbox"></i>
                 <h3>Workshop</h3>
                 <p>Discover and interact hands-on with various prototypes
-                    designed by professionals. You and your team will tweak
-                    their functions to test their usability in the real world.
-                </p>
+                    designed by professionals.</p>
             </li>
             <li id="at-ignite">
                 <i class="fas fa-project-diagram"></i>
@@ -94,6 +90,7 @@
                 </p>
             </li>
         </ul>
+        <button id="join-button" type="button">Join AT Global Summit 2022</button>
 
     </section>
 
