Add speakers section, created dynamically

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li id="at-exhibition">
                 <i class="fas fa-walking"></i>
                 <h3>AT Exhibition</h3>
-                <p>Take your time as you walk through the stands of 
+                <p>Take your time as you walk through the stands of
                     200 companies who have brought their best.</p>
             </li>
             <li id="forum">
@@ -91,12 +91,12 @@
             </li>
         </ul>
         <button id="join-button" type="button">Join AT Global Summit 2022</button>
-
     </section>
 
     <h2 class="cocogoose">Try cocogoose</h2>
     <h2 class="lato">Try Lato</h2>
 
+    <script src="scripts/speakers.js"></script>
 </body>
 
 </html>
