Add speakers section to index.html
-This was done for precaution.
Previously it was created in the script,
and appended to the body, which placed it
at the end; that could cause display problems
with the footer.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         <button id="join-button" type="button">Join AT Global Summit 2022</button>
     </section>
 
+    <section id="speakers"></section>
+
     <h2 class="cocogoose">Try cocogoose</h2>
     <h2 class="lato">Try Lato</h2>
 
