Add partner section

--- a/index.html
+++ b/index.html
@@ -95,8 +95,16 @@
 
     <section id="speakers"></section>
 
-    <h2 class="cocogoose">Try cocogoose</h2>
-    <h2 class="lato">Try Lato</h2>
+    <section id="partners">
+        <h3>Partner</h3>
+        <ul id="companies">
+            <li><a><img src="images/mozilla.png"></a></li>
+            <li><a><img src="images/google.png"></a></li>
+            <li><a><img src="images/bayer.png"></a></li>
+            <li><a><img src="images/essential.png"></a></li>
+            <li><a><img src="images/cargill.png"></a></li>
+        </ul>
+    </section>
 
     <script src="scripts/speakers.js"></script>
 </body>
