--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
     <section id="partners">
         <h3>Partner</h3>
         <ul id="companies">
-            <li><a><img src="images/mozilla.png"></a></li>
-            <li><a><img src="images/google.png"></a></li>
-            <li><a><img src="images/bayer.png"></a></li>
-            <li><a><img src="images/essential.png"></a></li>
-            <li><a><img src="images/cargill.png"></a></li>
+            <li><a><img src="images/mozilla.png" alt="mozilla logo"></a></li>
+            <li><a><img src="images/google.png" alt="google logo"></a></li>
+            <li><a><img src="images/bayer.png" alt="bayer logo"></a></li>
+            <li><a><img src="images/essential.png" alt="essential costa rica logo"></a></li>
+            <li><a><img src="images/cargill.png" alt="cargill logo"></a></li>
         </ul>
     </section>
 
