Style the intro section, cutout text.
Also, add title attribute to navbar images to improve accessibility.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav>
         <div class="navbar-top">
             <ul class="social-networks">
-                <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f" title="Facebook"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fab fa-twitter" title="Twitter"></i></a></li>
             </ul>
             <div class="languages">English</div>
             <div id="my-page">My Page</div>
@@ -46,9 +46,7 @@
             <h1>Agricultural Technology Global Summit 2022</h1>
         </div>
         <p>An exciting experience for both agriculture and tech
-            enthusiasts is taking place in March, in Costa Rica.
-            Take part and extend your network in an event hosting
-            the world's leading companies in agricultural technologies.</p>
+            enthusiasts is taking place in March, in Costa Rica.</p>
         <div class="when-where">
             <h2 id="date">2022.03.15(TUE) ~ 16(WED)</h2>
             <h2 id="location">@ Centro de Convenciones de Costa Rica</h2>
