Change logos in partners section

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
     <section id="partners">
         <h3>Partner</h3>
         <ul id="companies">
-            <li><a><img src="images/mozilla.png" alt="mozilla logo"></a></li>
-            <li><a><img src="images/google.png" alt="google logo"></a></li>
-            <li><a><img src="images/bayer.png" alt="bayer logo"></a></li>
-            <li><a><img src="images/essential.png" alt="essential costa rica logo"></a></li>
-            <li><a><img src="images/cargill.png" alt="cargill logo"></a></li>
+            <li><a><img src="images/johndeere.svg" alt="John Deere Logo"></a></li>
+            <li><a><img src="images/essential.svg" alt="Essential CR Logo"></a></li>
+            <li><a><img src="images/dji.svg" alt="DJI Logo"></a></li>
+            <li><a><img src="images/bayer.svg" alt="Bayer Logo"></a></li>
+            <li><a><img src="images/cargill.svg" alt="Cargill Logo"></a></li>
         </ul>
     </section>
 
