--- a/index.html
+++ b/index.html
@@ -104,6 +104,22 @@
         </ul>
     </section>
 
+    <footer>
+        <div class="footer-left">
+            <img id="atlogo-black" src="./images/atlogo-black.svg" alt="Agricultural Technology CR Logo Black">
+            <img id="atlogo-white" src="./images/atlogo-white.svg" alt="Agricultural Technology CR Logo White">
+        </div>
+        <div class="footer-right">
+            <h4>
+                2022 Agricultural Technology Costa Rica. Some Rights Reserved.
+            </h4>
+                <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
+                <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
+            
+        </div>
+
+    </footer>
+
     <script src="scripts/speakers.js"></script>
 </body>
 
