Add script for dropdown and icon to open and close

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar">
         <div class="navbar-top">
             <ul class="social-networks">
                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f" title="Facebook"></i></a></li>
@@ -35,12 +35,14 @@
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
                 <li><a href="#">News</a></li>
+                <li><img class="close" src="./images/times.svg" alt="close menu icon"></li>
             </ul>
             <button id="at-campaign" type="button">CC Campaign</button>
         </div>
     </nav>
 
     <section id="introduction">
+        <img class="toggleNav open" src="./images/ic_menu.svg" alt="Hamburguer icon">
         <div id="title">
             <h2>"Hello! Sharing World"</h2>
             <h1>Agricultural Technology Global Summit 2022</h1>
@@ -115,12 +117,12 @@
             </h4>
                 <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
                 <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
-            
         </div>
 
     </footer>
 
     <script src="scripts/speakers.js"></script>
+    <script src="scripts/dropdown.js"></script>
 </body>
 
 </html>
