Add navbar and intro to about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,54 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1d827eb1c8.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <nav class="navbar">
+        <div class="navbar-top">
+            <ul class="social-networks">
+                <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f" title="Facebook"></i></a></li>
+                <li><a href="https://twitter.com/"><i class="fab fa-twitter" title="Twitter"></i></a></li>
+            </ul>
+            <div class="languages">English</div>
+            <div id="my-page">My Page</div>
+            <div class="logout">Logout</div>
+        </div>
+        <div class="navbar-bottom">
+            <img id="navbar-logo" src="images/conference-logo.PNG" alt="Global Summit Logo">
+            <ul class="navbar-sections">
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="#">Program</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Sponsor</a></li>
+                <li><a href="#">News</a></li>
+                <li><img class="close" src="./images/times.svg" alt="close menu icon"></li>
+            </ul>
+            <button id="at-campaign" type="button">CC Campaign</button>
+        </div>
+    </nav>
 
+    <section id="introduction">
+        <img class="toggleNav open" src="./images/ic_menu.svg" alt="Hamburguer icon">
+        <div id="title">
+            <h2>"Hello! Sharing World"</h2>
+            <h1>Agricultural Technology Global Summit 2022</h1>
+        </div>
+        <p>The Global Summit brings together the community of experts,
+            academics, and activists who comprise the Agricultural Technology
+            affiliate network in a different country every two years.<br>
+            This year, we hope to expand our invitation list including
+            organizations and individuals.
+        </p>
+        <div class="contact-message">
+            <p>Please contact us per Email for any further questions about
+                AT Global Summit 2022!
+            </p>
+            <a>contact@agriculturaltechnology.com</a>
+        </div>
+    </section>
 
-    <h1 class="cocogoose">Hello About</h1>
-    <h1 class="lato">Bye About</h1>
-    
 </body>
+
 </html>
