Add dropdown to about page and style intro section

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Conference</title>
-    <link rel="stylesheet" media="screen and (min-width: 768px)" href="../styles/about-style-max-width-767px.css">
-    <link rel="stylesheet" media="screen and (max-width: 767px)" href="../styles/about-style-min-width-768px.css">
+    <link rel="stylesheet" href="../styles/about-style-max-width-767px.css">
+    <link rel="stylesheet" media="screen and (min-width: 768px)" href="../styles/about-style-min-width-768px.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -26,21 +26,21 @@
             <div class="logout">Logout</div>
         </div>
         <div class="navbar-bottom">
-            <img id="navbar-logo" src="images/conference-logo.PNG" alt="Global Summit Logo">
+            <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo">
             <ul class="navbar-sections">
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
                 <li><a href="#">News</a></li>
-                <li><img class="close" src="./images/times.svg" alt="close menu icon"></li>
+                <li><img class="close" src="../images/times.svg" alt="close menu icon"></li>
             </ul>
             <button id="at-campaign" type="button">CC Campaign</button>
         </div>
     </nav>
 
     <section id="introduction">
-        <img class="toggleNav open" src="./images/ic_menu.svg" alt="Hamburguer icon">
+        <img class="toggleNav open" src="../images/ic_menu.svg" alt="Hamburguer icon">
         <div id="title">
             <h2>"Hello! Sharing World"</h2>
             <h1>Agricultural Technology Global Summit 2022</h1>
@@ -52,13 +52,13 @@
             organizations and individuals.
         </p>
         <div class="contact-message">
-            <p>Please contact us per Email for any further questions about
-                AT Global Summit 2022!
-            </p>
+            Please contact us per Email for any further questions about
+             AT Global Summit 2022!
             <a>contact@agriculturaltechnology.com</a>
         </div>
     </section>
 
+    <script src="../scripts/dropdown.js"></script>
 </body>
 
 </html>
