Add 'click on logo sends user to index page'

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,7 @@
             <div class="logout">Logout</div>
         </div>
         <div class="navbar-bottom">
-            <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo">
+            <a href="../index.html"> <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo"> </a>
             <ul class="navbar-sections">
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="#">Program</a></li>
