Add logo-info section to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,7 +26,8 @@
             <div class="logout">Logout</div>
         </div>
         <div class="navbar-bottom">
-            <a href="../index.html"> <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo"> </a>
+            <a href="../index.html"> <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo">
+            </a>
             <ul class="navbar-sections">
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="#">Program</a></li>
@@ -53,8 +54,19 @@
         </p>
         <div class="contact-message">
             Please contact us per Email for any further questions about
-             AT Global Summit 2022!
+            AT Global Summit 2022!
             <a>contact@agriculturaltechnology.com</a>
+        </div>
+    </section>
+
+    <section id="logo-info">
+        <h2>Agricultural Technology Global Summit 2022 Logo</h2>
+        <p>The logo of AT Global Summit 2022 was decided through
+            the logo competition from 8. June to 7. July 2021.
+        </p>
+        <div class="logo-display">
+            <a href="../index.html"> <img id="display-logo" src="../images/conference-logo.PNG"
+                    alt="Global Summit Logo"></a>
         </div>
     </section>
 
