Add past-summits section to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,6 +70,21 @@
         </div>
     </section>
 
+    <section id="past-summits">
+        <h2>See the past AT Global Summits</h2>
+        <p> Take a look at the last two AT Global Summits which took
+            place in Buenos Aires and in Warsaw.
+        </p>
+        <div id="summit-2013">
+            <h3>2013</h3>
+            <p>AT Global Summit 2013 in Buenos Aires</p>
+        </div>
+        <div id="summit-2011">
+            <h3>2011</h3>
+            <p>AT Global Summit 2011 in Warsaw</p>
+        </div>
+    </section>
+
     <script src="../scripts/dropdown.js"></script>
 </body>
 
