--- a/pages/about.html
+++ b/pages/about.html
@@ -85,6 +85,32 @@
         </div>
     </section>
 
+    <section id="partners">
+        <h3>Partner</h3>
+        <ul id="companies">
+            <li><a><img src="../images/johndeere.svg" alt="John Deere Logo"></a></li>
+            <li><a><img src="../images/essential.svg" alt="Essential CR Logo"></a></li>
+            <li><a><img src="../images/dji.svg" alt="DJI Logo"></a></li>
+            <li><a><img src="../images/bayer.svg" alt="Bayer Logo"></a></li>
+            <li><a><img src="../images/cargill.svg" alt="Cargill Logo"></a></li>
+        </ul>
+    </section>
+    
+    <footer>
+        <div class="footer-left">
+            <img id="atlogo-black" src="../images/atlogo-black.svg" alt="Agricultural Technology CR Logo Black">
+            <img id="atlogo-white" src="../images/atlogo-white.svg" alt="Agricultural Technology CR Logo White">
+        </div>
+        <div class="footer-right">
+            <h4>
+                2022 Agricultural Technology Costa Rica. Some Rights Reserved.
+            </h4>
+            <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
+            <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
+        </div>
+    
+    </footer>
+
     <script src="../scripts/dropdown.js"></script>
 </body>
 
