Add extra text to about page intro section

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
             <a href="../index.html"> <img id="navbar-logo" src="../images/conference-logo.PNG" alt="Global Summit Logo">
             </a>
             <ul class="navbar-sections">
-                <li><a href="pages/about.html">About</a></li>
+                <li><a href="../pages/about.html">About</a></li>
                 <li><a href="#">Program</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Sponsor</a></li>
@@ -46,12 +46,20 @@
             <h2>"Hello! Sharing World"</h2>
             <h1>Agricultural Technology Global Summit 2022</h1>
         </div>
-        <p>The Global Summit brings together the community of experts,
-            academics, and activists who comprise the Agricultural Technology
-            affiliate network in a different country every two years.<br>
-            This year, we hope to expand our invitation list including
-            organizations and individuals.
-        </p>
+        <div class="intro-message">
+            <p>The Global Summit brings together the community of experts,
+                academics, and activists who comprise the Agricultural Technology
+                affiliate network in a different country every two years.
+                This year, we hope to expand our invitation list including
+                organizations and individuals.</p>
+                <p class="end-title">
+                    So, if you're active and engaged in the worlds of open content
+                    and knowledge - free software advocates, Wikipedians, Open Knowledge,
+                    galleries, libraries, museums, archives, governments, and foundations,
+                    lawyers, and activists - we hope you'll consider joining us this year
+                    to build a stronger, more vibrant commons together.
+                </p>
+            </div>
         <div class="contact-message">
             Please contact us per Email for any further questions about
             AT Global Summit 2022!
