Add text to desktop logo-info section

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,14 +52,14 @@
                 affiliate network in a different country every two years.
                 This year, we hope to expand our invitation list including
                 organizations and individuals.</p>
-                <p class="end-title">
-                    So, if you're active and engaged in the worlds of open content
-                    and knowledge - free software advocates, Wikipedians, Open Knowledge,
-                    galleries, libraries, museums, archives, governments, and foundations,
-                    lawyers, and activists - we hope you'll consider joining us this year
-                    to build a stronger, more vibrant commons together.
-                </p>
-            </div>
+            <p class="end-title">
+                So, if you're active and engaged in the worlds of open content
+                and knowledge - free software advocates, Wikipedians, Open Knowledge,
+                galleries, libraries, museums, archives, governments, and foundations,
+                lawyers, and activists - we hope you'll consider joining us this year
+                to build a stronger, more vibrant commons together.
+            </p>
+        </div>
         <div class="contact-message">
             Please contact us per Email for any further questions about
             AT Global Summit 2022!
@@ -69,9 +69,15 @@
 
     <section id="logo-info">
         <h2>Agricultural Technology Global Summit 2022 Logo</h2>
-        <p>The logo of AT Global Summit 2022 was decided through
-            the logo competition from 8. June to 7. July 2021.
-        </p>
+        <div class="logo-message">
+            <p>The logo of AT Global Summit 2022 was decided through
+                the logo competition from 8. June to 7. July 2021.</p>
+            <p class="end-logo">After online public voting and Selection
+                Commitee's judging process, the logo from Naresh Agrawal
+                won the prize. After consultation with Mr. Agrawal we
+                optimized the prize-winning-logo for this year's summit
+                as following:</p>
+        </div>
         <div class="logo-display">
             <a href="../index.html"> <img id="display-logo" src="../images/conference-logo.PNG"
                     alt="Global Summit Logo"></a>
@@ -103,7 +109,7 @@
             <li><a><img src="../images/cargill.svg" alt="Cargill Logo"></a></li>
         </ul>
     </section>
-    
+
     <footer>
         <div class="footer-left">
             <img id="atlogo-black" src="../images/atlogo-black.svg" alt="Agricultural Technology CR Logo Black">
@@ -116,7 +122,7 @@
             <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
             <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
         </div>
-    
+
     </footer>
 
     <script src="../scripts/dropdown.js"></script>
