--- a/pages/about.html
+++ b/pages/about.html
@@ -89,15 +89,17 @@
         <p> Take a look at the last two AT Global Summits which took
             place in Buenos Aires and in Warsaw.
         </p>
-        <div id="summit-2013">
-            <h3>2013</h3>
-            <p>AT Global Summit 2013 in Buenos Aires</p>
+        <div class="summit-preview">
+            <div id="summit-2013">
+                <h3>2013</h3>
+                <p>AT Global Summit 2013 in Buenos Aires</p>
+            </div>
+            <div id="summit-2011">
+                <h3>2011</h3>
+                <p>AT Global Summit 2011 in Warsaw</p>
+            </div>
         </div>
-        <div id="summit-2011">
-            <h3>2011</h3>
-            <p>AT Global Summit 2011 in Warsaw</p>
-        </div>
-    </section>
+        </section>
 
     <section id="partners">
         <h3>Partner</h3>
