Add href to phone and mail links in index & about

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <h4>
                 2022 Agricultural Technology Costa Rica. Some Rights Reserved.
             </h4>
-                <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
-                <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
+                <p id="service-email">Email: <a href="mailto:contact@agriculturaltechnology.com">contact@agriculturaltechnology.com</a></p>
+                <p id="service-phone">Phone: <a href="tel:+506 2668-6286">+506 2668-6286</a></p>
         </div>
 
     </footer>
