--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,7 @@
         <div class="contact-message">
             Please contact us per Email for any further questions about
             AT Global Summit 2022!
-            <a>contact@agriculturaltechnology.com</a>
+            <a href="mailto:contact@agriculturaltechnology.com">contact@agriculturaltechnology.com</a>
         </div>
     </section>
 
@@ -118,11 +118,9 @@
             <img id="atlogo-white" src="../images/atlogo-white.svg" alt="Agricultural Technology CR Logo White">
         </div>
         <div class="footer-right">
-            <h4>
-                2022 Agricultural Technology Costa Rica. Some Rights Reserved.
-            </h4>
-            <p id="service-email">Email: <a>contact@agriculturaltechnology.com</a></p>
-            <p id="service-phone">Phone: <a>+506 2668-6286</a></p>
+            <h4> 2022 Agricultural Technology Costa Rica. Some Rights Reserved. </h4>
+            <p id="service-email">Email:<a href="mailto:contact@agriculturaltechnology.com">contact@agriculturaltechnology.com</a></p>
+            <p id="service-phone">Phone:<a href="tel:+506 2668-6286">+506 2668-6286</a></p>
         </div>
 
     </footer>
