--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 2022 Agricultural Technology Costa Rica. Some Rights Reserved.
             </h4>
                 <p id="service-email">Email: <a href="mailto:contact@agriculturaltechnology.com">contact@agriculturaltechnology.com</a></p>
-                <p id="service-phone">Phone: <a href="tel:+506 2668-6286">+506 2668-6286</a></p>
+                <p id="service-phone">Phone: <a href="tel:(+506)26686286">+506 2668-6286</a></p>
         </div>
 
     </footer>
