Add empty hrefs to navbar elements

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f" title="Facebook"></i></a></li>
                 <li><a href="https://twitter.com/"><i class="fab fa-twitter" title="Twitter"></i></a></li>
             </ul>
-            <div class="languages">English</div>
-            <div id="my-page">My Page</div>
-            <div class="logout">Logout</div>
+            <div class="languages"><a href="#">English</a> </div>
+            <div id="my-page"><a href="#">My Page</a></div>
+            <div class="logout"><a href="#">Logout</a></div>
         </div>
         <div class="navbar-bottom">
             <a href="./index.html"> <img id="navbar-logo" src="./images/conference-logo.PNG" alt="Global Summit Logo"> </a>
