--- a/pages/about.html
+++ b/pages/about.html
@@ -49,7 +49,7 @@
         <div class="intro-message">
             <p>The Global Summit brings together the community of experts,
                 academics, and activists who comprise the Agricultural Technology
-                affiliate network in a different country every two years.
+                affiliate network in a different country every two years. <br>
                 This year, we hope to expand our invitation list including
                 organizations and individuals.</p>
             <p class="end-title">
